versioned_docs/version-19.0.2/getting-started/choosing-the-right-workflow.md
---
sidebar_position: 4
title: Which Workflow is Right for You?
image: https://kalai.fairdataihub.org/api/generate?title=Choosing%20the%20Right%20Workflow&description=Understand%20which%20workflow%20is%20right%20for%20your%20dataset&app=soda-for-sparc&org=fairdataihub
---

Not sure which workflow to use? Read the criteria listed under each option below and select the one that applies to your dataset.

:::info
If you are a guest to a workspace, such as SPARC, RE-JOIN, or HEAL, please refer to our documentation on how to contribute your data to a Pennsieve dataset with SODA here: [How to upload data to Pennsieve as a Pennsieve Guest](../miscellaneous/how-to/how-to-upload-as-pennsieve-guest.md)
:::

## Prepare a Dataset Step-by-Step

**Use this if:**

- You are submitting a dataset to Pennsieve for the first time
- Your dataset is **not yet** SPARC Dataset Structure (SDS) compliant
- You need help organizing and preparing your data

This workflow guides you through preparing your dataset to meet SDS requirements and then provides the ability to create a local copy of the standardized dataset as well as upload it to Pennsieve.

## Upload an SDS-Compliant Dataset

**Use this if either of the following is true:**

- Your dataset is already SPARC Dataset Structure (SDS) compliant and was prepared outside of SODA
- You are uploading data to an existing dataset on Pennsieve (as a collaborator or with additionally collected data)

This workflow lets you upload an SDS-compliant dataset directly to Pennsieve or add data to an existing dataset.

import PageFeedback from '@site/src/components/PageFeedback';

<PageFeedback />
